[package]
name = "oxygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.89"
serde ={ version="1.0.147", features=["derive"]}
base64 = { version="0.13.1"}
bs58 = { version ="0.4.0"}
serde_cbor  = {version="0.11.2"}
itertools = { version ="0.10.5"}
thiserror = { version="1.0.30"}
anyhow = { version= "1.0.61"}
hex  = { version="0.4.3"}
typed-builder = {version="0.11.0"}



[features]
alloc = [ "serde/alloc"]
default  = [ "alloc" ]
# default = [ "alloc"]




