[package]
name = "oxygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={ version="1.0.147", features=["derive"]}
base64 = { version="0.13.1"}
bs58 = { version ="0.4.0"}
itertools = { version ="0.10.5"}
thiserror = { version="1.0.30"}
anyhow = { version= "1.0.61"}
hex  = { version="0.4.3"}

serde_json= { version ="1.0.89", optional=true}
serde-transcode =  { version ="1.1.1", optional=true}

[dev-dependencies]
typed-builder = {version="0.11.0"}
pretty_assertions = { version="1.3.0"}
serde_json="1.0.89"
serde_cbor  = {version="0.11.2"}
serde-transcode =  { version ="1.1.1"}






[features]
serde_json_value=["serde_json", "serde-transcode"]
alloc = [ "serde/alloc"]
default  = [ "alloc", "serde_json_value" ]





